--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/deirdreemoran/Employee-Recognition-Awards.git"
   },
-  "author": "",
+  "author": "Taurus",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/deirdreemoran/Employee-Recognition-Awards/issues"
