--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "employee-recognition-awards",
+  "name": "demo_db",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
-  "devDependencies": {},
+  "main": "demo_db_connection.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/deirdreemoran/Employee-Recognition-Awards.git"
-  },
-  "author": "Taurus",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/deirdreemoran/Employee-Recognition-Awards/issues"
-  },
-  "homepage": "https://github.com/deirdreemoran/Employee-Recognition-Awards#readme"
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "mysql": "^2.16.0",
+    "node": "^10.11.0",
+    "oauth2-server": "^3.0.1",
+    "system-sleep": "^1.3.6"
+  }
 }
