Node express with handlebars support, sqlite3, and start of database functions built out

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "employee-recognition-awards",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
-  "devDependencies": {},
+  "name": "myapp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/deirdreemoran/Employee-Recognition-Awards.git"
-  },
-  "author": "Taurus",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/deirdreemoran/Employee-Recognition-Awards/issues"
-  },
-  "homepage": "https://github.com/deirdreemoran/Employee-Recognition-Awards#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "hbs": "~4.0.1",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "sqlite3": "^4.0.2"
+  }
 }
