--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "demo_db",
-  "version": "1.0.0",
-  "description": "",
-  "main": "demo_db_connection.js",
+  "name": "myapp",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.6",
-    "mysql": "^2.16.0",
-    "node": "^10.11.0",
-    "oauth2-server": "^3.0.1",
-    "system-sleep": "^1.3.6"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "hbs": "~4.0.1",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0",
+    "sqlite3": "^4.0.2"
   }
 }
