--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.2",
+    "node-latex": "^2.4.4"
   }
 }
