--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
     "node-latex": "^2.4.4",
+    "nodemailer": "^4.6.8",
     "sqlite3": "^4.0.3"
   }
 }
