--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "csv-export": "^1.0.2",
     "csv-writer": "^1.2.0",
+    "csvdata": "^1.7.0",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
